--- a/OFC_Cliente/src/model/PropertiesFile.properties
+++ b/OFC_Cliente/src/model/PropertiesFile.properties
@@ -2,6 +2,7 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
+#Port for do the connection
 port = 9999
-#host=localhost
+#IP for do the connection
 host = 192.168.21.19
